testsuite/serd-tests/good/test-id.nt
<http://example.org/eg#a> <http://example.org/eg#b> _:b1 .
_:B1 <http://example.org/eg#c> <http://example.org/eg#d> .
