testsuite/serd-tests/bad/bad-nt-syntax-uri-caret.nt
# Bad IRI : caret.
<http://example/^_^> <http://example/p> <http://example/o> .
